WexGit/Wex_DX/force-app/main/default/objects/Lead_record_Type__c/Lead_record_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Determines the Lead Record Type to use based on Program when lead is added via integration user</description>
    <label>Lead Record Type for Integration Insert</label>
</CustomObject>