WexGit/Wex_DX/force-app/main/default/objects/Lead_record_Type__c/fields/Lead_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Record Type ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>