WexGit/Wex_DX/force-app/main/default/objects/Lead_record_Type__c/fields/Lead_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Record Type Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>