WexGit/Wex_DX/force-app/main/default/objects/Lead_record_Type__c/fields/ProgramID__c.field-meta.xml
<CustomField>
    <fullName>ProgramID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProgramID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>